# pageos-pkgr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
docs/: design.md  draft.md  prompt.md
src/: app.rs  config.rs  crypto.rs  fsxg.rs  index.rs  main.rs  metadata.rs  net.rs  path.rs  repo.rs  serde_utils.rs  transaction.rs  version.rs
