[package]
name = "pageos-pkgr"
version = "2.0.4"
authors = ["PJ568 <pj568@pj568.eu.org>"]
edition = "2024"
license = "MPL-2.0"
description = "PageOS 系统的网页应用仓库管理工具，用于管理网页应用的安装、更新和仓库维护"
repository = "https://github.com/swaybien/pageos-pkgr"
homepage = "https://github.com/swaybien/pageos-pkgr"
keywords = ["package-manager", "web-app", "pageos", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9"
walkdir = "2.5.0"
sha2 = "0.10.9"
tempfile = "3.20.0"
